tests/compile-fail/Rule_21_2.rs
#[forbid(clippy_pedantic)]
#[forbid(clippy)]
#[forbid(warnings)]

macro_rules! println {
   () => (3;);
}

fn main() {
    println!();
}
